--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url("https://github.com/necolas/normalize.css/blob/master/normalize.css");
 @import url("https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css");
 html,
 body {
   font-family: "Bree Serif", Arial, Helvetica, sans-serif;
@@ -21,4 +22,86 @@ body {
 
 .intro {
   text-align: center;
+}
+
+ul.social-links {
+  list-style: none;
+  margin: 1rem 0 1rem 0;
+  padding: 0;
+  border-top: 4px solid #330202;
+}
+
+ul.social-links li {
+  padding: 2rem 0 0 0;
+  display: inline-block;
+  margin: 0 0.25rem;
+  position: relative;
+  transform-origin: 50% 0;
+  animation: moveIt 3s ease-in-out infinite;
+  height: 2rem;
+  width: 2rem;
+}
+
+ul.social-links li a {
+  position: absolute;
+  display: inline-block;
+  border-radius: 50%;
+  height: 2rem;
+  width: 2rem;
+  background-color: #ff3cac;
+  background-image: linear-gradient(
+    225deg,
+    #ff3cac 0%,
+    #784ba0 50%,
+    #2b86c5 100%
+  );
+  color: white;
+  line-height: 2rem;
+  left: 0;
+  top: 1.5rem;
+}
+
+ul.social-links li .line {
+  content: "";
+  position: absolute;
+  height: 2rem;
+  width: 4%;
+  background: #000;
+  top: 0;
+  left: 48%;
+}
+ul.social-links li::after {
+  content: "";
+  width: 1rem;
+  height: 0.5rem;
+  background: rgba(0, 0, 0, 0.2);
+  border-radius: 50%;
+  margin: 50px auto 0;
+  animation: moveShade 1.5s ease-in-out alternate infinite;
+  position: absolute;
+  left: 20%;
+  top: 1.5rem;
+}
+
+@keyframes moveIt {
+  0%,
+  100% {
+    transform: rotate(15deg);
+  }
+  50% {
+    transform: rotate(-15deg);
+  }
+}
+@keyframes moveShade {
+  0% {
+    transform: translateX(-1rem) scale(1, 0.5);
+    filter: blur(1rem);
+  }
+  50% {
+    filter: blur(0.2rem);
+  }
+  100% {
+    transform: translateX(1rem) scale(1, 0.5);
+    filter: blur(1rem);
+  }
 }
